# parafoil_ws

./: .dockerignore  .gitignore  CLAUDE_PATH_PLANNING_README.md  CLAUDE_REBUILD_README.md  README.md  parafoil_library_coarse.pkl
arm_docker/: Dockerfile  (+3 more)
src/parafoil_msgs/: CMakeLists.txt  package.xml
src/parafoil_msgs/srv/: QueryLibrary.srv  SetTarget.srv
src/parafoil_planner_v3/: README.md  README_SAFETY_FIRST.md  SAFETY_FIRST_DESIGN.md  STRONG_WIND_LIBRARY_PROMPT.md  STRONG_WIND_PLANNING_PROMPT.md  package.xml  setup.cfg  setup.py  target_update_policy.md
src/parafoil_planner_v3/config/: README.md  batch_scenarios.yaml  demo_risk_grid.npz  dynamics_params.yaml  gpm_params.yaml  gpm_params_online_test.yaml  guidance_params.yaml  guidance_params_calm_low.yaml  guidance_params_crosswind.yaml  guidance_params_gusty.yaml  guidance_params_strongwind.yaml  library_params.yaml  library_params_6dof_validation.yaml  library_params_full.yaml  library_params_strongwind_headwind.yaml  library_params_strongwind_headwind_coarse.yaml  optimization.yaml  planner_params.yaml  planner_params_online_gpm_test.yaml  planner_params_safety_demo.yaml  planner_params_safety_shenzhen_like.yaml  planner_params_strongwind.yaml  planner_params_strongwind_library_test.yaml  shenzhen_like_no_fly_polygons.json  shenzhen_like_no_fly_polygons_800x800.json  shenzhen_like_risk_grid_400x400.npz  shenzhen_like_risk_grid_800m.npz  shenzhen_like_risk_grid_800x800.npz
src/parafoil_planner_v3/launch/: e2e_verification.launch.py  full_system.launch.py  full_system_test.launch.py  library_generation.launch.py  planner.launch.py  safety_demo.launch.py  scenario_calm_low.launch.py  scenario_crosswind.launch.py  scenario_gusty.launch.py  scenario_strongwind.launch.py
src/parafoil_planner_v3/parafoil_planner_v3/: __init__.py  environment.py  landing_site_selector.py  planner_core.py  target_update_policy.py  types.py
(+147 files in other folders)
